# F1_Project

./: LICENSE.md  README.md  Setup.cfg  combined_result_with_drivers_2023.csv  drivers_data_2023.csv  get_data.py  graphique.py  interface.py  main.py  model.py  requirements.txt  resultats_openf1_selected_2023.csv  setup.cfg  simulation.py
F1_project/: __init__.py
F1_project/Graphique/: __init__.py  graphique.py
F1_project/Modelisation/: model.py  simulation.py
source/: F1_project.Graphique.rst  F1_project.Modelisation.rst  conf.py  index.rst
