[metadata]
name = F1_project
version = 0.5
author = Thomas Poizot & Esteban Brion
description = This a F1 strategy simulator for the season 2023
long_description = The project is a Formula 1 strategy simulator. It allows users to select a circuit and a driver, then simulates the qualifying session and race based on the chosen inputs. The simulator also displays a summary of the user s choices and provides information on race conditions. Lastly, it enables users to initiate the race simulation to assess the performance of the selected driver under various race conditions.
keywords = F1, simulation, strategy, 2023
[options]
python_requires = >=3.12
install_requires =
    numpy
    pandas
    PyQt5
    matplotlib
    scikit-learn
